--- a/cardmall.css
+++ b/cardmall.css
@@ -9,3 +9,10 @@
     height: 50px;
     -webkit-user-drag: none;
 }
+
+@media screen and (max-width: 768px)
+    .comment-item .user-cardmall-url img {
+        width: 63px;
+        height: 35px;
+    }
+}
